tests/NormalTests/paczka1/small_fuzzy/70981222.err
Error in line 1: FHfH7 A926 83,59
Error in line 7: A292 A926 8,2
Error in line 2: TaWgMi S291 92,7
Error in line 12: TaWgMi A926 14,8
